tests/baselines/reference/genericTypeAssertions2.errors.txt
genericTypeAssertions2.ts(4,9): error TS2322: Type 'null' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
genericTypeAssertions2.ts(10,5): error TS2322: Type 'B<string>' is not assignable to type 'A<number>'.
  Types of property 'foo' are incompatible.
    Type '(x: string) => void' is not assignable to type '(x: number) => void'.
      Types of parameters 'x' and 'x' are incompatible.
        Type 'number' is not assignable to type 'string'.
genericTypeAssertions2.ts(11,5): error TS2741: Property 'bar' is missing in type 'A<number>' but required in type 'B<number>'.
genericTypeAssertions2.ts(13,21): error TS2352: Conversion of type 'never[]' to type 'A<number>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  Property 'foo' is missing in type 'never[]' but required in type 'A<number>'.


==== genericTypeAssertions2.ts (4 errors) ====
    class A<T> { foo(x: T) { } }
    class B<T> extends A<T> {
        bar(): T {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
        }
    }
    
    var foo = new A<number>();
    var r: A<string> = <B<string>>new B();
    var r2: A<number> = <B<string>>new B(); // error
        ~~
!!! error TS2322: Type 'B<string>' is not assignable to type 'A<number>'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '(x: string) => void' is not assignable to type '(x: number) => void'.
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
    var r3: B<number> = <A<number>>new B(); // error
        ~~
!!! error TS2741: Property 'bar' is missing in type 'A<number>' but required in type 'B<number>'.
!!! related TS2728 genericTypeAssertions2.ts:3:5: 'bar' is declared here.
    var r4: A<number> = <A<number>>new A();
    var r5: A<number> = <A<number>>[]; // error
                        ~~~~~~~~~~~~~
!!! error TS2352: Conversion of type 'never[]' to type 'A<number>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   Property 'foo' is missing in type 'never[]' but required in type 'A<number>'.
!!! related TS2728 genericTypeAssertions2.ts:1:14: 'foo' is declared here.